--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,21 @@ h1 {
 a.featured {
     background-color: orange;
 }
+
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+
+a:visited {
+    color: purple;
+}
+
+a:hover {
+    text-decoration:underline;
+}
+
+a:active {
+    color: red;
+}
+
