--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ a:visited {
 }
 
 a:hover {
+    color: yellow;
     text-decoration:underline;
 }
 
@@ -42,3 +43,6 @@ a:active {
     color: red;
 }
 
+body {
+    font-family: sans-serif;
+}
